<resources>
    <string name="app_name">AndroidRecord</string>
    <string name="album_name_all">全部</string>
    <string name="button_preview">预览</string>
    <string name="button_apply_default">使用</string>
    <string name="button_apply">使用(%1$d)</string>
    <string name="button_back">返回</string>
    <string name="photo_grid_capture">拍一张</string>
    <string name="empty_text">还没有图片或视频</string>
    <string name="button_ok">我知道了</string>
    <string name="error_over_count_default">您已经达到最大选择数量</string>
    <string name="error_over_count">最多只能选择 %1$d 个文件</string>
    <string name="error_under_quality">图片质量太低</string>
    <string name="error_over_quality">图片质量太高</string>
    <string name="error_file_type">不支持的文件类型</string>
    <string name="error_type_conflict">不能同时选择图片和视频</string>
    <string name="error_no_video_activity">没有支持视频预览的应用</string>
    <string name="error_over_original_size">"该照片大于 %1$d M，无法上传将取消勾选原图"</string>
    <string name="error_over_original_count">"有 %1$d 张照片大于 %2$d M\n无法上传，将取消勾选原图"</string>
    <string name="button_original">原图</string>
    <string name="button_sure_default">确定</string>
    <string name="button_sure">确定(%1$d)</string>
    <string name="ugckit_video_cutter_activity_load_video_success_already_picked">已选取</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign">签到</string>
    <string name="integral">积分</string>
    <string name="Japanese_currency">日币</string>
    <string name="friendliness">友好度</string>
    <string name="prestige">威望</string>
    <string name="edit">编辑</string>
    <string name="interest_label">兴趣标签</string>
    <string name="follow">关注</string>
    <string name="edit_information">编辑资料</string>
    <string name="fans">粉丝</string>
    <string name="no_answer_get_first_answer">还没有人回答，抢一楼~</string>
    <string name="answer">答</string>
    <string name="no_more">没有更多了</string>
    <string name="more_loading">更多加载中...</string>
    <string name="appbar_coali_behavior">com.hao.androidrecord.activity.scrollable04.AlipayRefreshBehavior</string>
    <string name="debug_slide_header_title">NestedScrolling</string>
    <string name="debug_slide_header_description_short">
        This interface should be implemented by View subclasses that wish to support dispatching nested scrolling operations to a cooperating parent ViewGroup.
    </string>
    <string name="debug_slide_header_description_long">
        This interface should be implemented by View subclasses that wish to support dispatching nested scrolling operations to a cooperating parent ViewGroup.\n
        Classes implementing this interface should create a final instance of a NestedScrollingChildHelper as a field and delegate any View methods to the NestedScrollingChildHelper methods of the same signature.
        Views invoking nested scrolling functionality should always do so from the relevant ViewCompat, ViewGroupCompat or ViewParentCompat compatibility shim static methods. This ensures interoperability with nested scrolling views on Android 5.0 Lollipop and newer.
        Dispatch a fling to a nested scrolling parent.
        This method should be used to indicate that a nested scrolling child has detected suitable conditions for a fling. Generally this means that a touch scroll has ended with a velocity in the direction of scrolling that meets or exceeds the minimum fling velocity along a scrollable axis.
        If a nested scrolling child view would normally fling but it is at the edge of its own content, it can use this method to delegate the fling to its nested scrolling parent instead. The parent may optionally consume the fling or observe a child fling.
    </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="copyright">version&#160;<b>2.0.3</b>\nby&#160;<b>kyleduo</b></string>
    <string name="license">Apache License 2.0</string>
    <string name="style_default">Default Style</string>
    <string name="style_default_measure"><b>Specific exact width.</b> \n1. 80dp width;\n2. 80dp width &amp; 20dp thumb width;\n3. 20dp width &amp; 20dp thumb width, no enough room so do NOT display and no event;\n4. 2nd line negative thumbMargin;\n5. 3rd line. with text.</string>
    <string name="style_text">With Status Text</string>
    <string name="style_nofade">Default Style without background fade effect.</string>
    <string name="style_tint_color">Custom by tint color</string>
    <string name="style_custom">Custom Style</string>
    <string name="style_flyme">Flyme5 Style</string>
    <string name="style_miui">MIUI7 Style</string>
    <string name="style_md_ios">Material Design &#038; iOS Style</string>
    <string name="style_disable">Disable state</string>
    <string name="style_disable_opt">Toggle the others\' enable state</string>
    <string name="enable_title">enable/disable other SwitchButtons</string>
    <string name="use_listener">Work with listener</string>
    <string name="use_listener_distinguish_manually">Distinguish between manually and by code</string>
    <string name="use_listener_distinguish_manually_hint">Use the SwitchButton above to control this one.</string>
    <string name="use_delay">Work with delay</string>
    <string name="use_check_in_check">call setChecked(boolean)/setCheckedImmediately(boolean) in OnCheckedChangeListener\nIf the second SwitchButton is checked, the first one was "locked" to checked state.</string>
    <string name="use_listener_finish">You did it!</string>
    <string name="use_trigger_manually">Manually</string>
    <string name="use_trigger_by_code">By Code</string>
    <string name="use_long">work with stuff takes long</string>
    <string name="use_long_hint">Click "Start" button to kick it off.</string>
    <string name="use_long_finish">Click "Start" button to kick it off.</string>
    <string name="use_toggle">2 ways to TOGGLE</string>
    <string name="use_checked">2 ways to SET_CHECKED</string>
    <string name="toggle_animated">toggle();</string>
    <string name="toggle_animated_no_event">toggleNoEvent();</string>
    <string name="toggle_not_animated">toggleImmediately();</string>
    <string name="toggle_not_animated_no_event">toggleImmediatelyNoEvent();</string>
    <string name="checked_animated">setChecked(boolean);</string>
    <string name="checked_animated_no_event">setCheckedNoEvent(boolean);</string>
    <string name="checked_not_animated">setCheckedImmediately(boolean);</string>
    <string name="checked_not_animated_no_event">setCheckedImmediatelyNoEvent(boolean);</string>
    <string name="bt_start">Start</string>
    <string name="action_github">view in github</string>
    <string name="action_blog">my blog</string>
    <string-array name="contents">
        <item>@string/title_activity_style</item>
        <item>@string/title_activity_style_in_code</item>
        <item>@string/title_activity_use</item>
        <item>@string/title_activity_recycler_view</item>
        <item>@string/copyright</item>
        <item>@string/license</item>
        <item>多状态选择</item>
    </string-array>
    <string name="title_activity_style">Style in xml</string>
    <string name="title_activity_use">Easy to use</string>
    <string name="title_activity_style_in_code">Style in code</string>
    <string name="title_activity_recycler_view">Used in RecyclerView</string>
    <string name="disable_no_event">The right SwitchButton was checked in code using setCheckedImmediatelyNoEvent when first enter, so no effects there.</string>
    <string-array name="list">
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
        <item>List</item>
    </string-array>
    <string name="country_choose_select_position">选择位置</string>
    <string name="country_choose_location">定位到的位置</string>
    <string name="region_positoning">定位中</string>
    <string name="tv_all">全部</string>
    <string name="search_country_empty">暂不支持此国家或地区</string>
    <string name="cp_search_hint_text">城市中文名或拼音</string>
    <string name="cp_cancel">取消</string>
    <string name="cp_no_result">没有找到，换个词试试~</string>
    <string name="cp_locate_failed">定位失败</string>
    <string name="cp_locating">正在定位…</string>
    <string name="title_basic">Basic</string>
    <string name="title_custom_view01">Custom View - sample</string>
    <string name="title_custom_view02">Custom View - icon</string>
    <string name="title_imitation_loop">UseCase - Imitation of Loop</string>
    <string name="title_years">UseCase - Years</string>
    <string name="title_auto_select">Feature - Auto Tab Selection</string>
    <string name="title_auto_rtl">Feature - RTL Support</string>
    <string name="title_tab_scroll_disabled">Feature - Tab Scroll Disabled</string>
    <string name="title_tab_on_screen_limit">Feature - OnScreen Limit</string>
    <string name="app_github_url">https://github.com/nshmura/RecyclerTabLayout</string>
    <string name="app_github">GITHUB</string>
    <string name="message">
  【名称】景志安神口服液\n
     通用名称：景志安神口服液\n
     汉语拼音：Jingzhi Anshen Koufuye\n
  【成分】远志、石菖蒲、龟板、红景天、龙骨。辅料为蜂蜜；防腐剂为山梨酸。\n
    【性状】本品为棕褐色的液体；味甜，微苦。\n
    【功能主治】调理阴阳，益气安神。用于神经衰弱，症见失眠多梦，入夜烦热，眩晕头昏，记忆减退，神疲乏力。\n
    【规格】每支装10毫升\n
    【用法用量】口服，一次10～20毫升，一日2次，疗程两周。\n
    【不良反应】尚不明确。\n
    【禁忌】孕妇、哺乳期妇女禁用；高血压及感冒患者禁服。\n
    【注意事项】\n
    1.忌烟、酒及辛辣、油腻食物。\n
    2.服药期间要保持情绪乐观，切忌生气恼怒。\n
    3.高血压患者面红升火、头痛、口干明显者不宜。\n
    4.有心脏病、糖尿病、肝病、肾病等慢性病严重者应在医师指导下服用。\n
    5.本品不宜长期服用，服药7天症状无缓解，应去医院就诊。\n
    6.严格按用法用量服用，儿童、年老体弱者应在医师指导下服用。\n
    7.对本品过敏者禁用，过敏体质者慎用。\n
    8.药品性状发生改变时禁止服用。\n
    9.儿童必须在成人监护下使用。\n
    10.请将此药品放在儿童不能接触的地方。\n
    11.如正在服用其他药品，使用本品前请咨询医师或药师。\n
    【药物相互作用】如与其他药物同时使用可能会发生药物相互作用，详情其咨询医师或药师。\n
    【贮藏】遮光，密封。\n
    【包装】玻璃管制口服液瓶，每盒10支。\n
    【有效期】24个月\n
    【执行标准】国家药品监督管理局标准(试行)标准编号为WS-5126(B-0126)-2002\n
    【批准文号】国药准字B20020137\n
    【生产企业】通化万通药业股份有限公司\n
    </string>
    <string name="user_count">%d/%d</string>
    <string name="default_configuration_xml_fragment">Default Configuration via XML</string>
    <string name="default_configuration_code_fragment">Default Configuration via Code</string>
    <string name="expandablefab_fragment">ExpandableFab</string>
    <string name="faboptions_fragment">FabOptions</string>
    <string name="labels_fragment">Labels</string>
    <string name="overlay_fragment">Overlay</string>
    <string name="no_faboptions_fragment">No FabOptions</string>
    <string name="no_labels_fragment">No Labels</string>
    <string name="remove_faboptions_fragment">Remove FabOptions</string>
    <string name="open_downwards_fragment">Open Downwards</string>
    <string name="disabled_fragment">Disabled</string>
    <string name="multiple_expandablefabs_fragment">Multiple ExpandableFabs</string>
    <string name="custom_sizes_fragment">Custom Sizes</string>
    <string name="wacky_fragment">Wacky</string>
    <string name="snackbar_compatibility_fragment">Snackbar Compatibility</string>
    <string name="bottom_app_bar_compatibility_fragment">BottomAppBar Compatibility</string>
</resources>