<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/default_configuration_xml_fragment">

    <fragment
        android:id="@+id/default_configuration_xml_fragment"
        android:name="com.hao.androidrecord.activity.fabpop.DefaultConfigurationXmlFragment"
        android:label="@string/default_configuration_xml_fragment" />
    <fragment
        android:id="@+id/default_configuration_code_fragment"
        android:name="com.hao.androidrecord.activity.fabpop.DefaultConfigurationCodeFragment"
        android:label="@string/default_configuration_code_fragment" />

    <fragment
        android:id="@+id/expandablefab_fragment"
        android:name="com.hao.androidrecord.activity.fabpop.ExpandableFabFragment"
        android:label="@string/expandablefab_fragment" />
    <fragment
        android:id="@+id/faboptions_fragment"
        android:name="com.hao.androidrecord.activity.fabpop.FabOptionsFragment"
        android:label="@string/faboptions_fragment" />
    <fragment
        android:id="@+id/labels_fragment"
        android:name="com.hao.androidrecord.activity.fabpop.LabelsFragment"
        android:label="@string/labels_fragment" />
    <fragment
        android:id="@+id/overlay_fragment"
        android:name="com.hao.androidrecord.activity.fabpop.OverlayFragment"
        android:label="@string/overlay_fragment" />

    <fragment
        android:id="@+id/no_faboptions_fragment"
        android:name="com.hao.androidrecord.activity.fabpop.NoFabOptionsFragment"
        android:label="@string/no_faboptions_fragment" />
    <fragment
        android:id="@+id/no_labels_fragment"
        android:name="com.hao.androidrecord.activity.fabpop.NoLabelsFragment"
        android:label="@string/no_labels_fragment" />
    <fragment
        android:id="@+id/remove_faboptions_fragment"
        android:name="com.hao.androidrecord.activity.fabpop.RemoveFabOptionsFragment"
        android:label="@string/remove_faboptions_fragment" />
    <fragment
        android:id="@+id/open_downwards_fragment"
        android:name="com.hao.androidrecord.activity.fabpop.OpenDownwardsFragment"
        android:label="@string/open_downwards_fragment" />
    <fragment
        android:id="@+id/disabled_fragment"
        android:name="com.hao.androidrecord.activity.fabpop.DisabledFragment"
        android:label="@string/disabled_fragment" />
    <fragment
        android:id="@+id/multiple_expandablefabs_fragment"
        android:name="com.hao.androidrecord.activity.fabpop.MultipleExpandableFabsFragment"
        android:label="@string/multiple_expandablefabs_fragment" />
    <fragment
        android:id="@+id/custom_sizes_fragment"
        android:name="com.hao.androidrecord.activity.fabpop.CustomSizesFragment"
        android:label="@string/custom_sizes_fragment" />
    <fragment
        android:id="@+id/wacky_fragment"
        android:name="com.hao.androidrecord.activity.fabpop.WackyFragment"
        android:label="@string/wacky_fragment" />
    <fragment
        android:id="@+id/snackbar_compatibility_fragment"
        android:name="com.hao.androidrecord.activity.fabpop.SnackbarCompatibilityFragment"
        android:label="@string/snackbar_compatibility_fragment" />
    <fragment
        android:id="@+id/bottom_app_bar_compatibility_fragment"
        android:name="com.hao.androidrecord.activity.fabpop.BottomAppBarCompatibility"
        android:label="@string/bottom_app_bar_compatibility_fragment" />
</navigation>